# rLMS

./: .gitignore  Cargo.toml  Makefile  README.md  config.json  db.sqlite  test_database.sqlite
frontend/: package-lock.json  package.json
src/: book_object.rs  book_processing.rs  configuration.rs  initialisation.rs  main.rs  user_management.rs  user_object.rs  user_processing.rs  utilities.rs
static/css/: styles.css
static/js/: asset-manifest.json  index.html  main.bcbebcfb.js
templates/: index.html
