[package]
name = "SQLITE-RUST"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
bcrypt = "0.16.0"
crossterm = "0.28.1"
anyhow = "1.0.94"
validator = "0.19.0"
rpassword = "7.3.1"
rand = "0.8.5"
serde = { version ="1.0.216", features = ["derive"] }
serde_json = "1.0.133"

actix-web= "4.9.0"
actix-files="0.6.1"
tera="1.20.0"
log = "0.4.22"
env_logger = "0.11.5"